Add import-tickets script

--- a/uu-sprintman-tool-scriptlib/uuapp.json
+++ b/uu-sprintman-tool-scriptlib/uuapp.json
@@ -13,6 +13,11 @@
     }
   },
   "uu-sprintman-tool-scriptlib-uuscriptlib": {
-    "scriptList": []
+    "scriptList": [
+      {
+        "code": "uu-sprintman-tool-scriptlib/import-tickets",
+        "srcPath": "import-tickets.js"
+      }
+    ]
   }
 }
