--- a/uu-sprintman-tool-uu5lib/uu-sprintman-tool-uu5lib/package.json
+++ b/uu-sprintman-tool-uu5lib/uu-sprintman-tool-uu5lib/package.json
@@ -8,7 +8,10 @@
   "dependencies": {
     "uu5g05": "^1.22.1",
     "uu5g05-elements": "^1.22.1",
-    "uu5g05-forms": "^1.30.3"
+    "uu5g05-forms": "^1.30.3",
+    "uu_plus4u5g02": "^1.0.0",
+    "uu_plus4u5g02-elements": "^1.0.0",
+    "uu_plus4u5g02-app": "^1.2.2"
   },
   "uuBuildSettings": {
     "externals": {}
